# rustyhole

./: .env.example  Cargo.toml
src/: main.rs
static/: index.html
