[package]
name = "rustyhole"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
dotenv = "0.15"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.12"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3" 